--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,9 +1,11 @@
 <resources>
 
     <style name="AppBaseTheme" parent="Theme.AppCompat.Light">
-        <item name="colorPrimary">@color/material_deep_teal_200</item>
-        <item name="colorPrimaryDark">@color/material_deep_teal_500</item>
+        <item name="colorPrimary">@color/base_actionbar</item>
+        <item name="colorPrimaryDark">@color/base_status_bar</item>
         <item name="colorAccent">@color/material_blue_grey_800</item>
+        <item name="CardBackground">@color/white</item>
+        <item name="CardForeground">@color/gray</item>
     </style>
 
     <style name="AppTheme" parent="AppBaseTheme">
