--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -60,4 +60,14 @@
 		<attr name="UserInfoDivider" format="reference" />
 	</declare-styleable>
 
+	<declare-styleable name="SelectableRoundedImageView">
+		<attr name="sriv_left_top_corner_radius" format="dimension" />
+		<attr name="sriv_right_top_corner_radius" format="dimension" />
+		<attr name="sriv_left_bottom_corner_radius" format="dimension" />
+		<attr name="sriv_right_bottom_corner_radius" format="dimension" />
+		<attr name="sriv_border_width" format="dimension" />
+		<attr name="sriv_border_color" format="color" />
+		<attr name="sriv_oval" format="boolean" />
+		<attr name="android:scaleType" />
+	</declare-styleable>
 </resources>
