--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -312,4 +312,8 @@
     <color name="ptr_orange">#ea7800</color>
     <color name="ptr_blue">#0045aa</color>
 
+
+    <color name="yellow">#FFF7D23E</color>
+
+
 </resources>
