--- a/app/src/main/res/layout/card_weibo.xml
+++ b/app/src/main/res/layout/card_weibo.xml
@@ -7,7 +7,8 @@
     android:layout_margin="5dp"
     card_view:cardCornerRadius="3dp"
     card_view:cardElevation="2.5dp"
-    card_view:cardBackgroundColor="?attr/CardBackground"
+    android:foreground="?android:attr/selectableItemBackground"
+    android:clickable="true"
     >
     <include
         layout="@layout/item_weibo"
