--- a/app/src/main/res/layout/fragment_timeline.xml
+++ b/app/src/main/res/layout/fragment_timeline.xml
@@ -17,20 +17,16 @@
 * You should have received a copy of the GNU General Public License
 * along with BlackLight.  If not, see <http://www.gnu.org/licenses/>.
 -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	xmlns:app="http://schemas.android.com/apk/res-auto">
+	android:layout_height="match_parent">
 
-	<com.marshalchen.ultimaterecyclerview.UltimateRecyclerView
-		android:layout_width="fill_parent"
-		android:layout_height="fill_parent"
-		app:recyclerviewClipToPadding="true"
-		app:recyclerviewScrollbars="vertical"
-		app:recyclerviewDefaultSwipeColor="@array/google_colors"
+	<android.support.v7.widget.RecyclerView
+		android:layout_height="match_parent"
+		android:layout_width="match_parent"
 		android:id="@+id/home_timeline"
-		/>
-
+		android:divider="@null"/>
 
 
 </RelativeLayout>
