--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,6 +4,7 @@
         <item name="colorPrimary">@color/base_actionbar</item>
         <item name="colorPrimaryDark">@color/base_status_bar</item>
         <item name="colorAccent">@color/material_blue_grey_800</item>
+        <item name="android:textColorPrimary">@color/white</item>
         <item name="CardBackground">@color/white</item>
         <item name="CardForeground">@color/gray</item>
     </style>
