--- a/app/src/main/res/layout/fragment_drawer.xml
+++ b/app/src/main/res/layout/fragment_drawer.xml
@@ -2,9 +2,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#cccc"
-    tools:context="me.fycafe.materialsample.NavigationDrawerFragment" >
+    android:background="@color/white"
+	android:fitsSystemWindows="true"
+	android:orientation="vertical"
+	>
+	<LinearLayout
+		android:layout_width="match_parent"
+		android:layout_height="192dp"
+		android:background="?attr/colorPrimaryDark"
+		android:padding="16dp"
+		android:theme="@style/ThemeOverlay.AppCompat.Dark"
+		android:orientation="vertical"
+		android:gravity="bottom">
 
+		<TextView
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:text="Username"
+			android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
+
+	</LinearLayout>
 	<ListView android:id="@+id/drawer_list"
 			  android:layout_width="match_parent"
 	          android:layout_height="match_parent"
