--- a/app/src/main/res/layout/item_weibo_repost.xml
+++ b/app/src/main/res/layout/item_weibo_repost.xml
@@ -83,6 +83,7 @@
                     android:id="@+id/tv_orignal_content"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    style="@style/moment_text_content"
 
                     />
 
@@ -95,6 +96,7 @@
                     app:orientation="horizontal"
                     app:verticalSpacing="@dimen/moment_photo_margin"
                     android:layout_below="@+id/tv_orignal_content"
+
                     >
 
                 </com.dudutech.weibo.widget.FlowLayout>
