--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,29 @@
 <!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+
+<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/rl_main_root"
+    android:fitsSystemWindows="?attr/fits_windows"
+    >
+
+
+
+
+
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    >
+    android:background="?attr/colorPrimary"
 
+    >
+<FrameLayout
+    android:id="@+id/fl_drawer_root"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <!--
          As the main content view, the view below consumes the entire
          space available using match_parent in both dimensions.
@@ -31,6 +47,8 @@
         android:layout_below="@id/toolbar"
         />
 </RelativeLayout>
+</FrameLayout>
+
     <!--
          android:layout_gravity="start" tells DrawerLayout to treat
          this as a sliding drawer on the left side for left-to-right
@@ -50,7 +68,8 @@
         android:layout_marginRight="20dp"
         android:layout_gravity="start"
         tools:layout="@layout/fragment_drawer"
-        android:fitsSystemWindows="true"
         />
 
+
 </android.support.v4.widget.DrawerLayout>
+</RelativeLayout>
