--- a/app/src/main/res/values-v19/styles.xml
+++ b/app/src/main/res/values-v19/styles.xml
@@ -4,21 +4,27 @@
     <style name="AppBaseTheme" parent="Theme.AppCompat.NoActionBar">
         <item name="colorPrimary">@color/base_actionbar</item>
         <item name="colorPrimaryDark">@color/base_status_bar</item>
-        <item name="android:textColorPrimary">@color/white</item>
         <item name="colorAccent">@color/material_blue_grey_800</item>
+        <item name="android:textColorPrimary">@color/white</item>
         <item name="CardBackground">@color/white</item>
         <item name="CardForeground">@color/gray</item>
-
+        <item name="fits_windows">false</item>
 
     </style>
 
     <style name="AppTheme" parent="AppBaseTheme">
-
-        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:windowIsTranslucent">false</item>
-        <item name="android:windowTranslucentNavigation">false</item>
+        <!--Translucent system bars-->
+        <item name="android:windowTranslucentNavigation">true</item>
         <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowContentOverlay">@null</item>
 
     </style>
+    
+  <style name="AppTheme.Main">
+      <item name="android:windowIsTranslucent">false</item>
+      <item name="fits_windows">false</item>
+
+   </style>
+    
+    
 </resources>
