--- a/app/src/main/res/layout/activity_pics.xml
+++ b/app/src/main/res/layout/activity_pics.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent"
                 android:background="#3b3b3b" android:orientation="vertical">
     <!-- #3b3b3b -->
-    <uk.co.senab.photoview.ViewPagerFixed
+    <uk.co.senab.photoview.HackyViewPager
         android:id="@+id/viewPager" android:layout_width="fill_parent" android:layout_height="fill_parent"/>
 
     <View
@@ -22,10 +22,12 @@
     </LinearLayout>
 
 
-    <View
+
+<!--
+
+ <View
         android:layout_width="match_parent" android:layout_height="150dip"
         />
-<!--
     <LinearLayout android:id="@+id/layToolbar"
         android:layout_width="match_parent" android:layout_height="wrap_content">
 
