--- a/app/src/main/res/layout/item_weibo.xml
+++ b/app/src/main/res/layout/item_weibo.xml
@@ -14,12 +14,12 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
 
-        <ImageView
+        <com.dudutech.weibo.widget.LetterImageView
             android:id="@+id/iv_avatar"
             android:layout_width="@dimen/avatar_lst_item"
             android:layout_height="@dimen/avatar_lst_item"
             android:layout_marginRight="@dimen/MiddleMargin"
-            android:scaleType="centerInside" />
+            />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -60,7 +60,7 @@
 
             <TextView
                 android:id="@+id/tv_content"
-                style="@style/moment_text_content"
+                style="@style/txt_main_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/lst_default_null_item_selector"
@@ -94,7 +94,7 @@
                  >
                 <TextView
                     android:id="@+id/tv_time"
-                    style="@style/text_moment_time"
+                    style="@style/txt_remark"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
@@ -112,7 +112,7 @@
 
             <TextView
                 android:id="@+id/tv_from"
-                style="@style/text_moment_time"
+                style="@style/txt_remark"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/MiddleMargin"
