--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -20,8 +20,10 @@
         <item name="android:windowIsTranslucent">false</item>
         <item name="android:windowTranslucentNavigation">true</item>
         <item name="android:windowTranslucentStatus">true</item>
-
-
-
     </style>
+
+    <style name="AppTheme.UserHome">
+        <item name="fits_windows">true</item>
+    </style>
+
 </resources>
