--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -35,5 +35,5 @@
     <dimen name="margin_chat_name">20dp</dimen>
     <dimen name="moment_photo_margin">3dp</dimen>
 
-
+    <dimen name="detail_backdrop_height">256dp</dimen>
 </resources>
