--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,15 +31,28 @@
     </style>
 
 
-    <style name="text_moment_time">
+    <style name="txt_remark">
         <item name="android:textColor">@color/txt_remark</item>
         <item name="android:textSize">12sp</item>
     </style>
 
-    <style name="moment_text_content">
+    <style name="txt_main_content">
         <item name="android:textColor">@color/txt_title</item>
         <item name="android:textSize">14sp</item>
     </style>
+
+    <style name="txt_user_name">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="txt_user_info">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">14sp</item>
+
+    </style>
+
 
     <style name="text_moment_location">
         <item name="android:textColor">@color/base_deep</item>
@@ -60,7 +73,7 @@
 
 
     <style name="text_user_name">
-        <item name="android:textColor">@color/base_deep</item>
+        <item name="android:textColor">@color/base</item>
         <item name="android:textSize">14sp</item>
     </style>
 </resources>
