--- a/app/src/main/res/values-v19/styles.xml
+++ b/app/src/main/res/values-v19/styles.xml
@@ -9,7 +9,7 @@
         <item name="CardBackground">@color/white</item>
         <item name="CardForeground">@color/gray</item>
         <item name="fits_windows">false</item>
-
+        <item name="android:windowBackground">@color/base_actionbar</item>
     </style>
 
     <style name="AppTheme" parent="AppBaseTheme">
