--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -5,9 +5,10 @@
         <item name="colorPrimary">@color/base_actionbar</item>
         <item name="colorPrimaryDark">@color/base_status_bar</item>
         <item name="android:textColorPrimary">@color/white</item>
-        <item name="colorAccent">@color/material_blue_grey_800</item>
+        <item name="colorAccent">@color/transparent_1</item>
         <item name="CardBackground">@color/white</item>
         <item name="CardForeground">@color/gray</item>
+        <item name="android:windowBackground">@color/white</item>
 
 
 
@@ -15,6 +16,10 @@
 
     <style name="AppTheme" parent="AppBaseTheme">
 
+
+    </style>
+
+    <style name="AppTheme.Main">
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:windowIsTranslucent">false</item>
