--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
     <style name="AppBaseTheme" parent="Theme.AppCompat.NoActionBar">
         <item name="colorPrimary">@color/base_actionbar</item>
         <item name="colorPrimaryDark">@color/base_status_bar</item>
-        <item name="colorAccent">@color/material_blue_grey_800</item>
+        <item name="colorAccent">#FF5722</item>
         <item name="android:textColorPrimary">@color/white</item>
         <item name="CardBackground">@color/white</item>
         <item name="CardForeground">@color/gray</item>
