--- a/app/src/main/res/layout/activity_new_post.xml
+++ b/app/src/main/res/layout/activity_new_post.xml
@@ -29,6 +29,7 @@
      android:layout_below="@id/toolbar"
      >
       <EditText
+          android:id="@+id/edit"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_above="@+id/rl_tool"
