--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -48,6 +48,12 @@
         <item name="android:textSize">14sp</item>
     </style>
 
+    <style name="txt_menu">
+        <item name="android:textColor">@color/txt_title</item>
+        <item name="android:textSize">16sp</item>
+
+    </style>
+
     <style name="txt_user_name">
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">18sp</item>
