add mentionme freature ,chang the weibo item laoyout
add mentionme freature ,chang the weibo item laoyout
need go on , hurry up.

--- a/app/src/main/res/layout/fragment_drawer.xml
+++ b/app/src/main/res/layout/fragment_drawer.xml
@@ -1,10 +1,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
-	android:orientation="vertical"
-	>
+	xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	android:background="@color/white"
+	android:orientation="vertical">
 	<RelativeLayout
 		android:id="@+id/rl_header"
 		android:layout_width="match_parent"
@@ -64,6 +64,7 @@
 				android:layout_height="wrap_content"
 				android:src="@drawable/ic_dashboard"
 				android:layout_gravity="center_vertical"
+				android:tint="@color/ic_tint_nor"
 				/>
 			<TextView
 				android:layout_width="match_parent"
@@ -72,6 +73,7 @@
 				android:layout_gravity="center_vertical"
 				style="@style/txt_menu"
 				android:layout_marginLeft="25dp"
+
 				/>
 		</LinearLayout>
 
@@ -87,7 +89,8 @@
 				android:layout_height="wrap_content"
 				android:src="@drawable/ic_forum"
 				android:layout_gravity="center_vertical"
-				/>
+				android:tint="@color/ic_tint_nor"
+		/>
 			<TextView
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
