--- a/app/src/main/res/layout/item_weibo.xml
+++ b/app/src/main/res/layout/item_weibo.xml
@@ -8,223 +8,146 @@
     android:paddingBottom="20dp"
     android:paddingLeft="@dimen/MiddlePadding"
     android:paddingRight="@dimen/MiddlePadding"
-    android:paddingTop="14dp" >
+    android:paddingTop="14dp">
+
+    <include layout="@layout/lst_user_headview"></include>
+    <!-- 内容 -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:layout_marginLeft="50dp"
+        android:orientation="vertical">
 
-        <com.dudutech.weibo.widget.LetterImageView
-            android:id="@+id/iv_avatar"
-            android:layout_width="@dimen/avatar_lst_item"
-            android:layout_height="@dimen/avatar_lst_item"
-            android:layout_marginRight="@dimen/MiddleMargin"
-            />
-        <LinearLayout
+        <TextView
+            android:id="@+id/tv_content"
+            style="@style/txt_main_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
-            <!-- 用户头部 -->
+            android:background="@drawable/lst_default_null_item_selector"
+            android:lineSpacingMultiplier="1.2"
+            android:paddingTop="@dimen/SmallMargin" />
 
 
+        <com.dudutech.weibo.widget.FlowLayout
+            android:id="@+id/fl_images"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/SmallMargin"
+            app:horizontalSpacing="@dimen/moment_photo_margin"
+            app:orientation="horizontal"
+            app:verticalSpacing="@dimen/moment_photo_margin">
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                   >
+        </com.dudutech.weibo.widget.FlowLayout>
 
-                    <TextView
-                        android:id="@+id/tv_username"
-                        style="@style/text_user_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:focusable="false"
-                        android:gravity="center_vertical"
-                        android:singleLine="true"
-                        />
+        <TextView
+            android:id="@+id/tv_location"
+            style="@style/text_moment_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/lst_default_null_item_selector"
+            android:singleLine="true" />
 
+        <RelativeLayout
+            android:id="@+id/rl_buttons"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="13dp"
+            android:orientation="horizontal">
 
-
-                    <ImageView
-                        android:id="@+id/iv_delete"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:src="@drawable/btn_moment_delete_selector" 
-                        android:visibility="gone"
-                        android:padding="5dp"
-                        
-                        />
-                </RelativeLayout>>
-            <!-- 内容 -->
-
-            <TextView
-                android:id="@+id/tv_content"
-                style="@style/txt_main_content"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/lst_default_null_item_selector"
-                android:lineSpacingMultiplier="1.2"
-                android:paddingTop="@dimen/SmallMargin"
-                />
-
-
-            <com.dudutech.weibo.widget.FlowLayout
-                android:id="@+id/fl_images"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/SmallMargin"
-                app:horizontalSpacing="@dimen/moment_photo_margin"
-                app:orientation="horizontal"
-                app:verticalSpacing="@dimen/moment_photo_margin" >
-         
-            </com.dudutech.weibo.widget.FlowLayout>
-            
-
-            
-           
-      
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="@dimen/MiddleMargin"
-                android:paddingLeft="2dp"
-                 >
-                <TextView
-                    android:id="@+id/tv_time"
-                    style="@style/txt_remark"
+                android:id="@+id/ll_comment"
+                style="@style/moment_btn_layout"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true">
+
+                <ImageView
+                    android:id="@+id/iv_comment_count"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"
-                     />
+                    android:layout_gravity="center_vertical"
+                    android:focusable="false"
+                    android:src="@drawable/ic_comment_full"
+
+                    />
 
                 <TextView
-                    android:id="@+id/tv_location"
-                    style="@style/text_moment_location"
+                    android:id="@+id/tv_comment_count"
+                    style="@style/text_moment_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/lst_default_null_item_selector"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="5dp"
                     android:singleLine="true"
-                     />
+
+                    />
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/tv_from"
-                style="@style/txt_remark"
+
+            <LinearLayout
+                android:id="@+id/ll_like"
+
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/MiddleMargin"
-                android:singleLine="true"
-           />
-
-            <RelativeLayout
-                android:id="@+id/rl_buttons"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="13dp"
-                android:orientation="horizontal" >
-
-           
-
-                    <LinearLayout
-                        android:id="@+id/ll_comment"
-                        style="@style/moment_btn_layout"
-                        android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
-                        >
-                        <ImageView
-                            android:id="@+id/iv_comment_count"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:focusable="false"
-                            android:src="@drawable/ic_comment_full" 
-              
-                            />
-
-                        <TextView
-                            android:id="@+id/tv_comment_count"
-                            style="@style/text_moment_btn"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="5dp"
-                            android:singleLine="true"
-                            android:layout_gravity="center_vertical"
-                      
-                             />
-                    </LinearLayout>
-              
-
-                    <LinearLayout
-                        android:id="@+id/ll_like"
-                        
-                        android:layout_centerVertical="true"
-                        android:layout_toLeftOf="@+id/ll_comment"
-                        android:layout_marginRight="10dp"
-                        android:layout_height="26dp"
-                        android:layout_width="wrap_content"
-                        android:background="@drawable/btn_moment_operater_selector"
-                        
-                        
-                         >
-                        <ImageView
-                            android:id="@+id/iv_like"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:focusable="false"
-                            android:src="@drawable/ic_moment_like_full"
-                            android:layout_marginLeft="15dp"
-                            
-                             />
-
-                        <TextView
-                            android:id="@+id/tv_like_count"
-                            style="@style/text_moment_btn"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:singleLine="true"
-                            android:layout_marginRight="15dp"
-                           
-                          
-                             />
-                    </LinearLayout>
+                android:layout_height="26dp"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="10dp"
+                android:layout_toLeftOf="@+id/ll_comment"
+                android:background="@drawable/btn_moment_operater_selector"
 
 
-                    <LinearLayout
-                         android:id="@+id/ll_repost"
-                         style="@style/moment_btn_layout"
-                        android:layout_centerVertical="true">
+                >
 
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:focusable="false"
-                            android:src="@drawable/ic_moment_repost_full" />
+                <ImageView
+                    android:id="@+id/iv_like"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="15dp"
+                    android:focusable="false"
+                    android:src="@drawable/ic_moment_like_full"
 
-                        <TextView
-                            android:id="@+id/tv_repost_count"
-                            style="@style/text_moment_btn"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginLeft="5dp"
-                            android:singleLine="true"
-                            />
-                    </LinearLayout>
-                    
-                    
-                  
-             
-            </RelativeLayout>
+                    />
+
+                <TextView
+                    android:id="@+id/tv_like_count"
+                    style="@style/text_moment_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginRight="15dp"
+                    android:singleLine="true"
 
 
+                    />
+            </LinearLayout>
 
-        </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ll_repost"
+                style="@style/moment_btn_layout"
+                android:layout_centerVertical="true">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:focusable="false"
+                    android:src="@drawable/ic_moment_repost_full" />
+
+                <TextView
+                    android:id="@+id/tv_repost_count"
+                    style="@style/text_moment_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="5dp"
+                    android:singleLine="true" />
+            </LinearLayout>
+
+
+        </RelativeLayout>
+
     </LinearLayout>
 
 </LinearLayout>
+
