--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,8 @@
 <resources>
 
     <style name="AppBaseTheme" parent="Theme.AppCompat.NoActionBar">
-        <item name="colorPrimary">@color/base_actionbar</item>
-        <item name="colorPrimaryDark">@color/base_status_bar</item>
+        <item name="colorPrimary">#2f5a81</item>
+        <item name="colorPrimaryDark">#1c364d</item>
         <item name="colorAccent">@color/transparent_1</item>
         <item name="android:textColorPrimary">@color/white</item>
         <item name="CardBackground">@color/white</item>
@@ -15,7 +15,7 @@
 
     </style>
     <style name="AppTheme.Main">
-
+        <item name="MenuIconTint">@color/ic_tint_nor</item>
         <item name="android:windowIsTranslucent">false</item>
 
     </style>
@@ -49,8 +49,8 @@
     </style>
 
     <style name="txt_menu">
-        <item name="android:textColor">@color/txt_title</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@drawable/menu_txt_color_selector</item>
+        <item name="android:textSize">15sp</item>
 
     </style>
 
