--- a/app/src/main/res/drawable/bg_context_menu.xml
+++ b/app/src/main/res/drawable/bg_context_menu.xml
@@ -2,5 +2,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 	<item android:state_enabled="true" android:state_selected="false" android:drawable="@color/transparent" />
 	<item android:state_enabled="true" android:state_selected="true" android:drawable="@color/selected_bg"/>
-
+	<item android:state_enabled="true" android:state_pressed="true" android:drawable="@color/selected_bg"/>
+	<item android:state_enabled="true" android:state_pressed="false" android:drawable="@color/transparent" />
 </selector>
