--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -299,5 +299,6 @@
 
     <color name="ic_tint_nor">#707070</color>
     <color name="selected_bg">#d7d7d7</color>
-
+    <color name="btn_context_menu_normal">#ffffff</color>
+    <color name="btn_context_menu_pressed">#40000000</color>
 </resources>
