--- a/app/src/main/res/layout/item_comment_me.xml
+++ b/app/src/main/res/layout/item_comment_me.xml
@@ -7,7 +7,7 @@
     android:paddingTop="5dp"
     android:paddingBottom="5dp"
     android:paddingLeft="10dp"
-    android:paddingRight="13dp"
+    android:paddingRight="10dp"
     >
     <include
         android:id="@+id/header_view"
@@ -29,16 +29,41 @@
             android:layout_height="wrap_content"
             android:background="@drawable/lst_default_null_item_selector"
             android:lineSpacingMultiplier="1.2"
-            android:paddingTop="@dimen/SmallMargin" />
-
+           />
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/bg_fade"
+            android:layout_marginTop="10dp"
             >
             <ImageView
-                android:layout_width="@dimen/img_large"
-                android:layout_height="@dimen/img_large" />
+            android:id="@+id/iv_source"
+            android:layout_width="@dimen/img_large"
+            android:layout_height="@dimen/img_large"
+               android:scaleType="centerCrop"
+                />
+
+           <TextView
+               android:id="@+id/tv_status_author"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:layout_toRightOf="@+id/iv_source"
+               android:layout_margin="@dimen/MiniMiddleNargin"
+               style="@style/text_user_name"
+               />
+            <TextView
+                android:id="@+id/tv_status_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/iv_source"
+                android:maxLines="2"
+                android:layout_below="@id/tv_status_author"
+                android:layout_marginLeft="@dimen/MiniMiddleNargin"
+                android:layout_marginRight="@dimen/MiniMiddleNargin"
+                android:layout_marginBottom="@dimen/MiniMiddleNargin"
+                style="@style/txt_main_content"
+                />
+
         </RelativeLayout>
 
 
